# nanobar

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: client.rs  daemon.rs  main.rs  menubar.rs
