[package]
name = "nanobar"
version = "0.1.0"
edition = "2021"
description = "A minimal macOS menu bar manager"
license = "MIT"
repository = "https://github.com/yansircc/nanobar"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
core-graphics = "0.24"
core-foundation = "0.10"
anyhow = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSObject",
    "NSString",
    "NSNotification",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSView",
    "NSMenu",
    "NSMenuItem",
    "objc2-core-foundation",
] }
